# sdk-dotnet

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  Directory.build.props  IMPLEMENTATION_PLAN.md  README.md  RepoAndBuild-DirectoryStructure.props  TO_DO.md  Temporalio.sln  omnisharp.json  sdk-dotnet.sln
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: CopyRefDocsToGHPagesDir.bat  GitCommitPushGHPagesDir.bat
.github/workflows/: build-and-test-client-sdk.yml  ci.yml  client-sdk-test-report.yml  cpp-ci.yml  deploy-api-ref-docs-to-ghpages.yml  nightly-throughput-stress.yml  nightly.yml  nuget-package.yml  nuget-publish.yml  omes.yml  package.yml  release-publish.yml  run-bench.yml  run-bench.yml.disabled  test-report.yml
Doc/: README.md  index.md  toc.yml
Doc/ApiDoc/: README.md  index.md  toc.yml
Doc/Articles/: About_Temporal_SDK_for_DotNet.md  Contribution_Guide.md  Temporal_SDK_for-DotNet_High-Level_Spec.md  (+5 more)
Docs/: README.md  index.md  toc.yml
Src/: Directory.Build.props  Temporal.Sdk.sln
cpp/: CMakeLists.txt  CMakePresets.json  Doxyfile  vcpkg-configuration.json
cpp/cmake/: CompilerWarnings.cmake  Platform.cmake  ProtobufGenerate.cmake  temporalioConfig.cmake.in
cpp/examples/activity_worker/: main.cpp
cpp/examples/hello_world/: main.cpp
cpp/examples/signal_workflow/: main.cpp
cpp/examples/timer_workflow/: main.cpp
cpp/examples/update_workflow/: main.cpp
cpp/examples/workflow_activity/: main.cpp
cpp/extensions/opentelemetry/include/temporalio/extensions/opentelemetry/: tracing_interceptor.h
cpp/extensions/opentelemetry/src/: tracing_interceptor.cpp
cpp/include/temporalio/: version.h
cpp/include/temporalio/activities/: activity.h  activity_context.h
cpp/include/temporalio/client/: temporal_client.h  temporal_connection.h  workflow_handle.h  workflow_options.h
cpp/include/temporalio/client/interceptors/: client_interceptor.h
cpp/include/temporalio/common/: enums.h  metric_meter.h  workflow_history.h
cpp/include/temporalio/converters/: data_converter.h  payload_conversion.h
cpp/include/temporalio/coro/: cancellation_token.h  coroutine_scheduler.h  run_sync.h  task.h  task_completion_source.h
cpp/include/temporalio/exceptions/: temporal_exception.h
cpp/include/temporalio/nexus/: operation_handler.h
cpp/include/temporalio/runtime/: temporal_runtime.h
cpp/include/temporalio/testing/: activity_environment.h  workflow_environment.h
cpp/include/temporalio/worker/: temporal_worker.h  workflow_instance.h  workflow_replayer.h
cpp/include/temporalio/worker/interceptors/: worker_interceptor.h
cpp/include/temporalio/worker/internal/: activity_worker.h  nexus_worker.h  workflow_worker.h
cpp/include/temporalio/workflows/: workflow.h  workflow_definition.h
cpp/src/temporalio/client/: rpc_helpers.h  temporal_client.cpp  temporal_connection.cpp  workflow_handle.cpp
cpp/src/temporalio/client/interceptors/: client_interceptor.cpp
cpp/src/temporalio/coro/: coroutine_scheduler.cpp
cpp/src/temporalio/nexus/: operation_handler.cpp
cpp/src/temporalio/runtime/: temporal_runtime.cpp
cpp/src/temporalio/testing/: activity_environment.cpp  workflow_environment.cpp
cpp/src/temporalio/worker/: temporal_worker.cpp  workflow_instance.cpp  workflow_replayer.cpp
cpp/src/temporalio/worker/internal/: activity_worker.cpp  nexus_worker.cpp  workflow_worker.cpp
cpp/src/temporalio/workflows/: workflow.cpp
cpp/tests/: CMakeLists.txt  main.cpp
cpp/tests/activities/: activity_definition_tests.cpp
cpp/tests/bridge/: call_scope_tests.cpp
cpp/tests/client/: client_options_tests.cpp  workflow_handle_tests.cpp
cpp/tests/converters/: payload_roundtrip_tests.cpp
cpp/tests/coro/: cancellation_token_tests.cpp  coroutine_scheduler_tests.cpp  task_completion_source_tests.cpp  task_tests.cpp
cpp/tests/extensions/opentelemetry/: otel_span_creation_tests.cpp  tracing_interceptor_tests.cpp
cpp/tests/fixtures/: workflow_environment_fixture.cpp
cpp/tests/integration/: integration_tests.cpp
cpp/tests/nexus/: operation_handler_tests.cpp
cpp/tests/testing/: activity_environment_tests.cpp
cpp/tests/worker/: worker_options_tests.cpp  workflow_instance_tests.cpp  workflow_replayer_tests.cpp
cpp/tests/workflows/: workflow_ambient_tests.cpp  workflow_definition_tests.cpp
docs/: CNAME  README.md  index.html  index.json  manifest.json
src/: Directory.Build.props
src/Temporalio/Bridge/: ByteArray.cs  ByteArrayRef.cs  CancellationToken.cs  Cargo.toml  Client.cs  CustomMetricMeter.cs  CustomSlotSupplier.cs  DeterministicRandom.cs  EnvConfig.cs  EphemeralServer.cs  ForwardedLog.cs  GenerateInterop.rsp  Metric.cs  MetricAttributes.cs  MetricInteger.cs  MetricMeter.cs  NativeInvokeableClass.cs  OptionsExtensions.cs  Runtime.cs  SafeClientHandle.cs  SafeConnectionHandle.cs  SafeHandleReference.cs  SafeUnmanagedHandle.cs  SafeWorkerHandle.cs  Scope.cs  Worker.cs  WorkerReplayer.cs  build.rs
src/Temporalio/Bridge/Api/: .editorconfig  CoreInterface.cs
src/Temporalio/Bridge/Api/ActivityResult/: ActivityResult.cs
src/Temporalio/Bridge/Api/ActivityTask/: ActivityTask.cs
src/Temporalio/Bridge/Api/ChildWorkflow/: ChildWorkflow.cs
src/Temporalio/Bridge/Api/Common/: Common.cs
src/Temporalio/Bridge/Api/ExternalData/: ExternalData.cs
src/Temporalio/Bridge/Api/Grpc/Health/V1/: GrpcHealth.cs
src/Temporalio/Bridge/Api/Nexus/: Nexus.cs
src/Temporalio/Bridge/Api/WorkflowActivation/: WorkflowActivation.cs
src/Temporalio/Bridge/Api/WorkflowCommands/: WorkflowCommands.cs
src/Temporalio/Bridge/Api/WorkflowCompletion/: WorkflowCompletion.cs
src/Temporalio/Bridge/Interop/: .editorconfig  Interop.cs  NativeTypeNameAttribute.cs
src/Temporalio/Bridge/include/: temporal-sdk-bridge.h
src/Temporalio/Bridge/src/: client.rs  lib.rs  metric.rs  random.rs  runtime.rs  testing.rs  worker.rs
test-consumer/: CMakeLists.txt  main.cpp
tests/: Directory.Build.props
vcpkg-port/: portfile.cmake  vcpkg.json
(+2159 files in other folders)
